--- a/semana1/sistema-loja/layout-site.css
+++ b/semana1/sistema-loja/layout-site.css
@@ -1,39 +1,62 @@
 body {
     height: 100vh;
     font-family:Arial, Helvetica, sans-serif;
+    margin: 0;
 }
 
-.logo{
-    display: inline;
-    height: 10vh;
+.cabecalho {
+    background-color:cadetblue;
+    height: 20vh;
+    margin-top: -24px;
+}
+
+.logo {
+    margin-top: 24px;
 }
 
 .refrao {
-    display: inline-block;
-    margin: 0 400px;
-    height: 10vh;
-    font-size: 48px;
+    text-align: center;
+    font-size: 32px;
+}
+
+.bloco-links {
+    color: black;
+    float: right;
+    
 }
 
 .links {
-    color: black;
-    background-color: yellow;
-    float: right;
     text-decoration: none;
-    margin: 0 8px;
+    background-color: yellow;
+    margin-right: 16px;
     border: 1px solid black;
 }
 
+.links-funcionarios {
+    background-color: red;
+}
 .corpo {
-    height: 50vh;
+    height: 60vh;
     text-align: center;
     font-size: 36px;
-    padding-top: 120px;
+    margin-top: -48px;
+    background-color:darkkhaki;
+}
+
+.texto-corpo {
+    padding-top: 160px;
+}
+
+#topico-estoque {
+    padding-top: 20px;
 }
 
 .rodape {
     height: 20vh;
     text-align: center;
+    background-color:darkmagenta;
+    margin-top: -20px;
+    padding-top: 64px;
 }
 
 .fotos {
@@ -41,22 +64,26 @@ body {
 }
 
 .formulario {
-    height: 50vh;
-    margin-top: 200px;
-    text-align: center;
+    padding-top: 80px;
 }
 
 .lista {
     list-style-position:inside;
 }
 
+.lista-corpo {
+    padding-top: 64px;
+}
+
 .tabela,th,td {
-    border: 1px solid black;
+    background-color:deepskyblue;
+    border: 1px solid rgb(194, 84, 84);
     border-collapse: collapse;
 }
 
 .tabela {
-    height: 50vh;
+    height: 40vh;
     margin-right: auto;
     margin-left: auto;
+    color:indigo;
 }
