--- a/semana1/sistema-loja/layout-site.css
+++ b/semana1/sistema-loja/layout-site.css
@@ -96,11 +96,22 @@ body {
     width: 80vh;
     margin: auto;
     padding-top: 80px;
-    color: gold;
+    color: black;
+    background-color:lightgrey;
     text-align: center;
 }
 
-label,.pag-form {
+.form2 {
+    display: block;
+    width: 80vh;
+    margin: auto;
+    color: black;
+    background-color: lightgrey;
+    text-align: center;
+    font-size: 24px;
+}
+
+label {
     display: inline-block;
     width: 50vh;
     text-align: left;
@@ -118,7 +129,8 @@ label,.pag-form {
     background-color:palegoldenrod;
     height: 64px;
     width: 160px;
-    margin-top: 80px;
+    margin-top: 48px;
+    margin-bottom: 16px;
     font-size: 24px;
 }
 
