--- a/semana1/bugfixes/exercicio-aula6/index.css
+++ b/semana1/bugfixes/exercicio-aula6/index.css
@@ -68,7 +68,7 @@ div img {
 
 #container-de-descricao {
     background-color: #2274a5;
-    color: white;
+    color: white;   
 }
 
 #container-de-descricao>ol {
@@ -88,6 +88,7 @@ div img {
 
 #formatacao-texto {
     padding-top: 160px;
+    list-style-position: inside;
 }
 
 /**
