--- a/semana1/bugfixes/exercicio-aula6/index.css
+++ b/semana1/bugfixes/exercicio-aula6/index.css
@@ -33,10 +33,6 @@ div>p:first-child {
     display: inline;
 }
 
-div img {
-    background: black;
-}
-
 .botao-amarelo {
     background-color: #ffaf43;
     width: 250px;
@@ -56,7 +52,8 @@ div img {
 }
 
 .icone {
-    height: 15px;
+    height: 2vh;
+    width: 2vh;
 }
 
 
