--- a/semana1/bugfixes/exercicio-aula6/index.css
+++ b/semana1/bugfixes/exercicio-aula6/index.css
@@ -25,6 +25,10 @@ button:focus {
     color: white;
 }
 
+button:active {
+    color: white;
+}
+
 img {
     width: 8vh;
 }
@@ -117,6 +121,10 @@ td button {
     color: black;
 }
 
+button:hover {
+    background-color:#f8cc06;
+}
+
 .container-do-search {
     margin-top: 20px;
     height: 100px;
@@ -134,5 +142,9 @@ td button {
 }
 
 #back-button:hover {
-    background-color: #635a3d
+    background-color: #635a3d;
+}
+
+#back-button:active {
+    color: white;
 }
