--- a/semana1/bugfixes/exercicio-aula6/index.css
+++ b/semana1/bugfixes/exercicio-aula6/index.css
@@ -91,8 +91,9 @@ div>p:first-child {
 }
 
 #formatacao-texto {
-    padding-top: 160px;
+    padding-top: 120px;
     list-style-position: inside;
+    font-size: 24px;
 }
 
 /**
