--- a/semana1/portfolio/styles.css
+++ b/semana1/portfolio/styles.css
@@ -13,20 +13,20 @@
 }
 
 body {
-    height: 200vh;
-    background-color:white;
+    height: 400vh;
+    background-color:black;
 }
 
 header {
-    height: 10vh;
+    height: 20vh;
     background-color: whitesmoke;
     position: relative;
 }
 
-.logo, h1 {
-    display: inline;
-    height: 6vh;
-    width: 12vh;
+h1 {
+    position: absolute;
+    top: 32px;
+    left: 32px;
 }
 
 .menu {
@@ -36,13 +36,18 @@ header {
 }
 
 .botao {
-    background-color: palegoldenrod;
+    background-color: goldenrod;
     text-decoration: none;
     border-style: outset;
-    border-color: gold;
+    border-color: grey;
     border-radius: 1px;
     color: black;
     margin-right: 1vh;
+}
+
+.botao:hover {
+    background-color: gold;
+    color: white;
 }
 
 p {
@@ -51,17 +56,18 @@ p {
 }
 
 footer {
-    height: 20vh;
-    margin-top: 10vh;
-    padding-top: 2vh;
-    background-color: black;
+    height: 25vh;
+    margin-top: 15vh;
+    padding-top: 5vh;
+    background-color: lightseagreen;
     color: white;
     text-align: center;
 }
 
 .redes-sociais {
-    width: 10vh;
+    width: 5vh;
     margin-right: 16px;
+    margin-top: 32px;
 }
 
 /* 
@@ -71,7 +77,7 @@ footer {
 */
 
 h2 {
-    padding-top: 16px;
+    padding-top: 32px;
 }
 
 #descricao {
@@ -82,54 +88,60 @@ h2 {
 }
 
 section {
-    height: 30vh;
-    margin-top: 10vh;
+    height: 70vh;
+    margin-top: 15vh;
     width: 60%;
     display: block;
     margin-right: auto;
     margin-left: auto;
     border-style:outset;
     border-radius: 2px;
-    background-color:cornflowerblue;
+    background-color: lightgoldenrodyellow;
     position: relative;
     text-align: center;
 }
 
 #foto-perfil {
-    height: 10vh;
-    width: 10vh;
+    height: 30vh;
+    width: 30vh;
+    margin-top: 10vh;
 }
 
 .bloco-projeto1, .bloco-projeto2, .bloco-projeto3 {
     position: absolute;
-    bottom: 16px;
-    height: 160px;
-    width: 25%;
+    bottom: 30vh;
+    height: 200px;
+    width: 30%;
     text-align: center;
-    padding-top: 64px;
+    padding-top: 16px;
     text-decoration: none;
     color: black;
     background-color:lightsteelblue;
     border: 2px powderblue ridge;
 }
 
+.bloco-projeto1:hover, .bloco-projeto2:hover, .bloco-projeto3:hover {
+    background-color: rgba(117, 117, 182, 0.938);
+    color: white;
+}
+
 .bloco-projeto1 {
-    left: 5%;
+    left: 2%;
 }
 
 .bloco-projeto2 {
-    left: 40%;
+    left: 35%;
 }
 
 .bloco-projeto3 {
-    left: 70%;
+    left: 68%;
 }
 
 .bloco-lateral1 {
     position: absolute;
     bottom:0;
     left:0;
-    height: 20vh;
+    height: 60vh;
     width: 50%;
 }
 
@@ -137,12 +149,43 @@ section {
     position: absolute;
     bottom:0;
     right:0;
-    height: 20vh;
+    height: 60vh;
     width: 50%;
+}
+
+.instituicoes {
+    width: 20%;
+}
+
+.imagens-projetos {
+    width: 20vh;
+    margin-top: 16px;
+}
+
+#secao1, #secao2, #secao3 {
+    font-size: 24px;
+}
+
+div a p {
+    margin-top: 8px;
+    font-size: 16px;
+    color: green;
 }
 
 ul {
     list-style-type: none;
+    margin-top: 5vh;
+    padding-right: 10vh;
+    padding-left: 10vh;
+    text-align: justify;
+    font-size: 16px;
+}
+
+.botao-subir {
+    position: absolute;
+    bottom: 16px;
+    left: 480px;
+    text-decoration: none;
 }
 
 /* 
@@ -151,10 +194,19 @@ ul {
 *
 */
 
+#corpo-contato {
+    height: 60vh;
+}
+
 #formulario {
-    height:60vh;
+    height:40vh;
     text-align: center;
-    padding-top: 16vh;
+    padding-top: 8vh;
+    color: goldenrod;
+}
+
+label {
+    font-size: 24px;
 }
 
 #name, #email, #comments{
@@ -166,5 +218,15 @@ ul {
 }
 
 #botao-enviar {
-    margin-top: 10vh;
+    margin-top: 5vh;
+    height: 40px;
+    width: 80px;
+    font-size: 24px;
+    border-radius: 2px;
+}
+
+#botao-enviar:hover {
+    background-color:lightgrey;
+    color: white;
+    cursor: pointer;
 }
